scripts/external-vm/external-vm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-vm
