scripts/external-vm/expose-istiod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: expose-istiod
spec:
  selector:
    istio: east-west-gw
  servers:
  - port:
      name: tls-istiod
      number: 15012
      protocol: tls
    tls:
      mode: PASSTHROUGH
    hosts:
    - "*"
  - port:
      name: tls-istiodwebhook
      number: 15017
      protocol: tls
    tls:
      mode: PASSTHROUGH
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: expose-istiod
spec:
  hosts:
  - "*"
  gateways:
  - expose-istiod
  tls:
  - match:
    - port: 15012
      sniHosts:
      - "*"
    route:
    - destination:
        host: istiod.istio-system.svc.cluster.local
        port:
          number: 15012
  - match:
    - port: 15017
      sniHosts:
      - "*"
    route:
    - destination:
        host: istiod.istio-system.svc.cluster.local
        port:
          number: 443
